2002-06-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* */Makefile.am: cleaning up distro stuff
	* exult.spec.in: fixed
	* usecode/ucxt/head2data.cc: removed utils.cc dependency

2002-06-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: typo

2002-06-06  Ryan Nunn  <triforce@merlin.net.au>
	* browser.cc, gamerend.cc, gumps/gump_utils.cc : Fixing problems
	  introduced by Kirben when getting Exult Exult to compile with GCC3.1
	  in Windows.
	* actorio.cc, objs/objiter.cc, msvcstuff/Exult.dsp : Some last minute
	  changes for MSVC. Not required, but I though it would be a good idea
	  since the CVS Tag is being moved to include Kirbens changes

2002-06-05  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Removed the allow any item in back slot code.
	* gumps/Paperdoll_gump.cc : Fixed bug where items were in wrong places.
	* gumps/Paperdoll_gump_info.cc : Allow bags, barrels, boxes, crates,
	  chests and baskets to be placed in the back slot in BG.
	* cheat.cc : Fixing a few a warning, and adding missing header include
	* exult.cc, server/servemsg.cc : Getting win32 versions to build
	  without #define USE_EXULTSTUDIO
	* Makefile.win32, Makefile.cygwin, win32/*.*, msvcstuff/*.* : Updating
	  Win32 version numbers.
	* Makefile.am, audio/midi_drivers/Makefile.am, server/Makefile.am :
	  Added a few missing files so building the source dist will include
	  all the files (as far as I know)

2002-06-05  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* NEWS, configure.in, Makefile.be, Makefile.MorphOS: 0.99.1RC2
	* keyactions.cc: changed version string (copyright -2002)

2002-06-05  Jeff Freedman  <jeff@amy.nerble.net>

	* cheat.cc (public): Cut/copy/paste added to Exult & EStudio.

2002-06-04  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: applied patches by Robert Bihlmeyer
	* data/credits.txt: added Robert Bihlmeyer

2002-06-04  Ryan Nunn  <triforce@merlin.net.au>